# jetson_sync

./: .gitignore  AGENTS.md  rec_bag_all_exclude_bag.sh  thrust_calibrate.py
real2sim/: config.yaml  ulg_reader.py
simple_px4_odom/: CMakeLists.txt
simple_px4_odom/launch/: vio_to_mavros_odom.launch
simple_px4_odom/src/: vio_to_mavros_odom.cpp
simple_px4_odom/src/simple_px4_odom/: CMakeLists.txt  package.xml
simple_px4_odom/src/simple_px4_odom/config/: params.yaml
simple_px4_odom/src/simple_px4_odom/launch/: mocap_to_mavros_odom.launch  vio_to_mavros_odom.launch
simple_px4_odom/src/simple_px4_odom/src/: mocap_to_mavros_odom.cpp  vio_to_mavros_odom.cpp
sync/: .env  common.sh  copy_ssh_key.sh  lsyncd.conf.lua  raise_sudoer.sh  remote-catkin-make  remote-exec.sh  setup-sync.sh  setup-syncthing.sh  syncthing-wait.sh  zuanfeng-sync.service
thrust_calibration/: auto_hover_common.sh  px4ctrl.yaml  run_auto_hover.launch  run_auto_hover.sh  run_auto_hover_mocap.sh  run_auto_hover_vio.sh  start_thrust_calibration.sh  stop_thrust_calibration.sh  thrust_calibrate.py  tmux_utils.sh
