<?xml version="1.0"?>
<package format="2">
  <name>simple_px4_odom</name>
  <version>0.0.1</version>
  <description>VIO odometry to MAVROS odometry converter (FLU to FRD)</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>

  <export></export>
</package>
